add support for OSX 10.3 SDK support so build done on 10.3 can be run on previous OS versions. Enabled with configure flag --with-macos-sdk=dir (bug 224161, r=bryner)